--- a/api/internal/api-repository-internal.yaml
+++ b/api/internal/api-repository-internal.yaml
@@ -13,9 +13,12 @@ tags:
     description: product-storages-api
   - name: storages-internal-api
     description: storages-api
+  - name: storages-filesystem-internal-api
+    description: 文件系统内部接口API
 paths:
   /v1/internal/product-storages:
     post:
+      x-product: OceanProtect X
       tags:
         - product-storages-internal-api
       summary: 根据设备wwns查询资源信息
@@ -55,6 +58,7 @@ paths:
       deprecated: false
   /v1/internal/product-storages/action/verify:
     get:
+      x-product: OceanProtect X
       tags:
         - product-storages-internal-api
       summary: 权限校验
@@ -88,20 +92,12 @@ paths:
         - Authorization:
             - global
       deprecated: false
-  /v1/internal/local-storage/ethernet-ports/action/check:
+  /v1/local-storage/internal/ethernet-ports/action/check:
     get:
-      x-dm-role: 'N'
-      x-impact-subsystem: 不影响
-      x-access-port: 8081
-      x-auth-required: 'N'
-      x-rd-admin-role: 'N'
-      x-auditor-role: 'N'
-      x-dp-admin-role: 'N'
-      x-public-api: 'N'
-      x-sysadmin-role: 'N'
+      x-product: OceanProtect X
       tags:
         - local-storage-internal-api
-      summary: '${api.storages.clearAlarm}'
+      summary: ${api.storages.clearAlarm}
       operationId: checkPortAvailableUsingGET
       produces:
         - '*/*'
@@ -130,17 +126,10 @@ paths:
       security:
         - Authorization:
             - global
-  /v1/internal/local-storage/info:
+      deprecated: false
+  /v1/local-storage/internal/info:
     get:
-      x-dm-role: 'N'
-      x-impact-subsystem: 不影响
-      x-access-port: 8081
-      x-auth-required: 'N'
-      x-rd-admin-role: 'N'
-      x-auditor-role: 'N'
-      x-dp-admin-role: 'N'
-      x-public-api: 'N'
-      x-sysadmin-role: 'N'
+      x-product: OceanProtect X
       tags:
         - local-storage-internal-api
       summary: 获取本地存储信息
@@ -162,20 +151,13 @@ paths:
       security:
         - Authorization:
             - global
-  '/v1/internal/local-storage/storage/alarm/action/clear/{sequence}':
+      deprecated: false
+  /v1/local-storage/internal/storage/alarm/action/clear/{sequence}:
     delete:
-      x-dm-role: 'N'
-      x-impact-subsystem: 不影响
-      x-access-port: 8081
-      x-auth-required: 'N'
-      x-rd-admin-role: 'N'
-      x-auditor-role: 'N'
-      x-dp-admin-role: 'N'
-      x-public-api: 'N'
-      x-sysadmin-role: 'N'
+      x-product: OceanProtect X
       tags:
         - local-storage-internal-api
-      summary: '${api.storages.clearAlarm}'
+      summary: ${api.storages.clearAlarm}
       operationId: clearLocalStorageAlarmRecoveryUsingDELETE
       produces:
         - '*/*'
@@ -198,20 +180,13 @@ paths:
       security:
         - Authorization:
             - global
-  '/v1/internal/local-storage/storage/alarm/{start}/{end}':
+      deprecated: false
+  /v1/local-storage/internal/storage/alarm/{start}/{end}:
     get:
-      x-dm-role: 'N'
-      x-impact-subsystem: 不影响
-      x-access-port: 8081
-      x-auth-required: 'N'
-      x-rd-admin-role: 'N'
-      x-auditor-role: 'N'
-      x-dp-admin-role: 'N'
-      x-public-api: 'N'
-      x-sysadmin-role: 'N'
+      x-product: OceanProtect X
       tags:
         - local-storage-internal-api
-      summary: '${api.storages.getLocalStorageAlarm}'
+      summary: ${api.storages.getLocalStorageAlarm}
       operationId: getLocalStorageAlarmUsingGET
       produces:
         - '*/*'
@@ -245,20 +220,13 @@ paths:
       security:
         - Authorization:
             - global
-  '/v1/internal/local-storage/storage/history/alarm/cleared/{start}/{end}':
+      deprecated: false
+  /v1/local-storage/internal/storage/history/alarm/cleared/{start}/{end}:
     get:
-      x-dm-role: 'N'
-      x-impact-subsystem: 不影响
-      x-access-port: 8081
-      x-auth-required: 'N'
-      x-rd-admin-role: 'N'
-      x-auditor-role: 'N'
-      x-dp-admin-role: 'N'
-      x-public-api: 'N'
-      x-sysadmin-role: 'N'
+      x-product: OceanProtect X
       tags:
         - local-storage-internal-api
-      summary: '${api.storages.getLocalStorageEvent}'
+      summary: ${api.storages.getLocalStorageEvent}
       operationId: getLocalStorageEventUsingGET
       produces:
         - '*/*'
@@ -292,20 +260,13 @@ paths:
       security:
         - Authorization:
             - global
-  '/v1/internal/local-storage/storage/history/alarm/recovered/{start}/{end}':
+      deprecated: false
+  /v1/local-storage/internal/storage/history/alarm/recovered/{start}/{end}:
     get:
-      x-dm-role: 'N'
-      x-impact-subsystem: 不影响
-      x-access-port: 8081
-      x-auth-required: 'N'
-      x-rd-admin-role: 'N'
-      x-auditor-role: 'N'
-      x-dp-admin-role: 'N'
-      x-public-api: 'N'
-      x-sysadmin-role: 'N'
+      x-product: OceanProtect X
       tags:
         - local-storage-internal-api
-      summary: '${api.storages.getLocalStorageEvent}'
+      summary: ${api.storages.getLocalStorageEvent}
       operationId: getLocalStorageAlarmRecoveryUsingGET
       produces:
         - '*/*'
@@ -339,17 +300,10 @@ paths:
       security:
         - Authorization:
             - global
-  /v1/internal/storages/storage-info:
+      deprecated: false
+  /v1/storages/internal/storage-info:
     get:
-      x-dm-role: 'N'
-      x-impact-subsystem: 影响
-      x-access-port: 8081
-      x-auth-required: 'N'
-      x-rd-admin-role: 'N'
-      x-auditor-role: 'N'
-      x-dp-admin-role: 'N'
-      x-public-api: 'N'
-      x-sysadmin-role: 'N'
+      x-product: OceanProtect X
       tags:
         - storages-internal-api
       summary: storageInfo
@@ -373,17 +327,10 @@ paths:
       security:
         - Authorization:
             - global
-  '/v1/internal/storages/{storageId}':
+      deprecated: false
+  /v1/storages/internal/storage/{storageId}:
     get:
-      x-dm-role: 'N'
-      x-impact-subsystem: 影响
-      x-access-port: 8081
-      x-auth-required: 'N'
-      x-rd-admin-role: 'N'
-      x-auditor-role: 'N'
-      x-dp-admin-role: 'N'
-      x-public-api: 'N'
-      x-sysadmin-role: 'N'
+      x-product: OceanProtect X
       tags:
         - storages-internal-api
       summary: queryFullStorageById
@@ -413,6 +360,46 @@ paths:
       security:
         - Authorization:
             - global
+      deprecated: false
+  /v1/internal/local-storage/fssnapshot/info:
+    get:
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 30081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'N'
+      x-sysadmin-role: 'Y'
+      tags:
+        - storages-filesystem-internal-api
+      description: 根据文件系统名称，快照名称查询快照信息
+      operationId: getFsSnapshotByNames
+      parameters:
+        - name: fileSystemName
+          in: query
+          required: true
+          description: 文件系统名称
+          type: string
+        - name: snapshotName
+          in: query
+          required: true
+          description: 快照名称
+          type: string
+      responses:
+        '200':
+          description: 文件系统快照信息
+          schema:
+            $ref: '#/definitions/LocalFileSystemSnapshot'
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
 securityDefinitions:
   Authorization:
     type: apiKey
@@ -428,11 +415,11 @@ definitions:
       nodeId:
         type: string
         description: 节点ID
-        pattern: '^[a-zA-Z0-9]{1,1024}$'
+        pattern: ^[a-zA-Z0-9]{1,1024}$
       realNodeName:
         type: string
         description: 节点名称
-        pattern: '^[a-zA-Z0-9]{1,1024}$'
+        pattern: ^[a-zA-Z0-9]{1,1024}$
     title: AnyBackupNodeRelocation
   AnyBackupNodeVO:
     type: object
@@ -577,7 +564,7 @@ definitions:
       type:
         type: integer
         format: int32
-        description: '存储库类型。   1:本地存储库  2:蓝光存储库  3:磁带存储库'
+        description: 存储库类型。   1:本地存储库  2:蓝光存储库  3:磁带存储库
       useHttps:
         type: boolean
         description: 是否使用HTTPS
@@ -707,7 +694,7 @@ definitions:
       type:
         type: integer
         format: int32
-        description: '存储库类型。   1:本地存储库  2:蓝光存储库  3:磁带存储库'
+        description: 存储库类型。   1:本地存储库  2:蓝光存储库  3:磁带存储库
       useHttps:
         type: boolean
         description: 是否使用HTTPS
@@ -874,16 +861,16 @@ definitions:
         type: integer
         format: int32
         example: 4
-        description: '告警等级[取值范围] 3:重要 4:紧急'
+        description: 告警等级[取值范围] 3:重要 4:紧急
       limitValue:
         type: integer
         format: int64
         example: 80
-        description: '告警阈值，type为1时表示百分比[取值范围]（50-90）;type为2时表示绝对值[取值范围]（正整数）,单位为GB'
+        description: 告警阈值，type为1时表示百分比[取值范围]（50-90）;type为2时表示绝对值[取值范围]（正整数）,单位为GB
       limitValueUnit:
         type: string
         example: 1
-        description: '告警阈值存储单位[取值范围] 1表示TB, 2表示GB，当告警类型是绝对值时进行填写'
+        description: 告警阈值存储单位[取值范围] 1表示TB, 2表示GB，当告警类型是绝对值时进行填写
       matchTime:
         type: integer
         format: int32
@@ -893,11 +880,11 @@ definitions:
         type: integer
         format: int64
         example: 50
-        description: '清除告警阈值，type为1时表示百分比[取值范围]（小于告警阈值）;type为2时表示绝对值[取值范围]（小于告警阈值）,单位为GB'
+        description: 清除告警阈值，type为1时表示百分比[取值范围]（小于告警阈值）;type为2时表示绝对值[取值范围]（小于告警阈值）,单位为GB
       recoverValueUnit:
         type: string
         example: 1
-        description: '清除告警阈值存储单位[取值范围] 1表示TB, 2表示GB，当告警类型是绝对值时进行填写'
+        description: 清除告警阈值存储单位[取值范围] 1表示TB, 2表示GB，当告警类型是绝对值时进行填写
       repositoryId:
         type: string
         example: 1
@@ -906,7 +893,7 @@ definitions:
         type: integer
         format: int32
         example: 1
-        description: '百分比或者绝对值[取值范围] 1:百分比 2:绝对值'
+        description: 百分比或者绝对值[取值范围] 1:百分比 2:绝对值
     title: RepositoryAlarmThresholdVo
   RepositoryBase:
     type: object
@@ -928,7 +915,7 @@ definitions:
       status:
         type: integer
         format: int32
-        description: '存储库状态。 -1:离线  0:在线'
+        description: 存储库状态。 -1:离线  0:在线
       totalSize:
         type: integer
         format: int64
@@ -936,7 +923,7 @@ definitions:
       type:
         type: integer
         format: int32
-        description: '存储库类型。   1:本地存储库  2:蓝光存储库  3:磁带存储库'
+        description: 存储库类型。   1:本地存储库  2:蓝光存储库  3:磁带存储库
       usedSize:
         type: integer
         format: int64
@@ -955,7 +942,7 @@ definitions:
         type: integer
         format: int32
         example: 4
-        description: '告警等级[取值范围] 3:重要 4:紧急'
+        description: 告警等级[取值范围] 3:重要 4:紧急
         minimum: 0.0
         maximum: 9.223372036854776e18
         exclusiveMinimum: false
@@ -964,13 +951,13 @@ definitions:
         type: integer
         format: int64
         example: 80
-        description: '告警阈值，type为1时表示百分比[取值范围]（50-90）;type为2时表示绝对值[取值范围]（正整数）,单位为GB'
+        description: 告警阈值，type为1时表示百分比[取值范围]（50-90）;type为2时表示绝对值[取值范围]（正整数）,单位为GB
         minimum: 1.0
         exclusiveMinimum: false
       limitValueUnit:
         type: string
         example: 1
-        description: '告警阈值存储单位[取值范围] 1表示TB, 2表示GB，当告警类型是绝对值时进行填写'
+        description: 告警阈值存储单位[取值范围] 1表示TB, 2表示GB，当告警类型是绝对值时进行填写
       matchTime:
         type: integer
         format: int32
@@ -984,18 +971,18 @@ definitions:
         type: integer
         format: int64
         example: 50
-        description: '清除告警阈值，type为1时表示百分比[取值范围]（小于告警阈值）;type为2时表示绝对值[取值范围]（小于告警阈值）,单位为GB'
+        description: 清除告警阈值，type为1时表示百分比[取值范围]（小于告警阈值）;type为2时表示绝对值[取值范围]（小于告警阈值）,单位为GB
         minimum: 1.0
         exclusiveMinimum: false
       recoverValueUnit:
         type: string
         example: 1
-        description: '清除告警阈值存储单位[取值范围] 1表示TB, 2表示GB，当告警类型是绝对值时进行填写'
+        description: 清除告警阈值存储单位[取值范围] 1表示TB, 2表示GB，当告警类型是绝对值时进行填写
       type:
         type: integer
         format: int32
         example: 1
-        description: '百分比或者绝对值[取值范围] 1:百分比 2:绝对值'
+        description: 百分比或者绝对值[取值范围] 1:百分比 2:绝对值
         minimum: 0.0
         maximum: 9.223372036854776e18
         exclusiveMinimum: false
@@ -1025,14 +1012,14 @@ definitions:
       nodeId:
         type: string
         description: 节点ID
-        pattern: '^[a-zA-Z0-9]{1,1024}$'
+        pattern: ^[a-zA-Z0-9]{1,1024}$
       nodeIp:
         type: string
         description: 节点IP
       nodeName:
         type: string
         description: 节点名称
-        pattern: '^[a-zA-Z0-9]{1,1024}$'
+        pattern: ^[a-zA-Z0-9]{1,1024}$
       pathFreeSize:
         type: integer
         format: int64
@@ -1042,7 +1029,7 @@ definitions:
       pathName:
         type: string
         description: 挂载路径
-        pattern: '/dpa/dpa_fs_[0-9]_[0-9]{2}_[0-9a-zA-Z]{24}/?'
+        pattern: /dpa/dpa_fs_[0-9]_[0-9]{2}_[0-9a-zA-Z]{24}/?
       status:
         type: integer
         format: int32
@@ -1065,7 +1052,7 @@ definitions:
       volName:
         type: string
         description: 卷名
-        pattern: '^[a-zA-Z0-9]{3,30}$'
+        pattern: ^[a-zA-Z0-9]{3,30}$
     title: StandardBackupVol
   StandardBackupVolVO:
     type: object
@@ -1190,7 +1177,7 @@ definitions:
       ak:
         type: string
         description: AK
-        pattern: '^[\S]{1,256}$'
+        pattern: ^[\S]{1,256}$
       alarmEnable:
         type: boolean
         description: 是否开启告警
@@ -1204,7 +1191,7 @@ definitions:
       bucketName:
         type: string
         description: 数据桶名称
-        pattern: '^[\S]{1,256}$'
+        pattern: ^[\S]{1,256}$
       cloudType:
         type: integer
         format: int32
@@ -1216,11 +1203,11 @@ definitions:
       endpoint:
         type: string
         description: 终端节点
-        pattern: '^[\S]{1,256}$'
+        pattern: ^[\S]{1,256}$
       indexBucketName:
         type: string
         description: 索引桶名称
-        pattern: '^[\S]{1,256}$'
+        pattern: ^[\S]{1,256}$
       proxyEnable:
         type: boolean
         description: 是否使用代理
@@ -1236,7 +1223,7 @@ definitions:
       sk:
         type: string
         description: SK
-        pattern: '^[\S]{1,256}$'
+        pattern: ^[\S]{1,256}$
       storageId:
         type: string
         description: 存储id
@@ -1246,7 +1233,7 @@ definitions:
       type:
         type: integer
         format: int32
-        description: '存储库类型。   1:本地存储库  2:蓝光存储库  3:磁带存储库'
+        description: 存储库类型。   1:本地存储库  2:蓝光存储库  3:磁带存储库
       useHttps:
         type: boolean
         description: 是否使用HTTPS
@@ -1288,3 +1275,23 @@ definitions:
         minLength: 1
         maxLength: 64
     title: UpdateStorageRequest
+  LocalFileSystemSnapshot:
+    type: object
+    properties:
+      id:
+        type: string
+        description: 快照id
+      name:
+        type: string
+        description: 快照名称
+      isSecuritySnap:
+        type: boolean
+        description: 是否安全快照
+      isInProtectionPeriod:
+        type: boolean
+        description: 是否在保护期内
+    required:
+      - id
+      - name
+      - isSecuritySnap
+      - isInProtectionPeriod
